mpcontribs-portal/mpcontribs/portal/assets/css/main.scss
@charset "utf-8";
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
@import "~select2/dist/css/select2.min.css";
@import "~json-human/css/json.human.css";
@import "~spin.js/spin.css";
@import "~backgrid/lib/backgrid.min.css";
@import "~backgrid-paginator/backgrid-paginator.min.css";
@import "~backgrid-filter/backgrid-filter.min.css";
@import "~backgrid-grouped-columns/backgrid-grouped-columns.css";
@import "~backgrid-columnmanager/lib/Backgrid.ColumnManager.css";
@import "~@fortawesome/fontawesome-free/css/all.css";
@import '~handsontable/dist/handsontable.full.css';

$family-sans-serif: "Nunito", sans-serif;
$tooltip-background-opacity: 1;
$widescreen-enabled: false;
$fullhd-enabled: false;
$widescreen-enabled: false;

$turquoise: #51bdb4; // primary
$grey-darker: #2d3f50; // background
$black-ter: #233140; // hover background
$grey-light: #3acfbc; // link hover
$old-grey-light: #dbdbdb; // old grey

$link: $turquoise;
$link-hover: $grey-light;
$button-text-color: $grey-darker;
$input-border-color: $old-grey-light;
$button-border-color: $old-grey-light;
$switch-background: $old-grey-light;

$card-content-padding: 0.5rem;
$card-background-color: $grey-darker;
$card-color: white;
$card-media-margin: 0.5rem;
$card-content-background-color: $grey-darker;
$card-shadow: none;

$box-color: white;
$box-background-color: $grey-darker;
$box-padding: 0.75em;

$navbar-background-color: $grey-darker;
$navbar-item-color: $link;
$navbar-item-hover-color: $grey-light;
$navbar-item-hover-background-color: $black-ter;

$tabs-link-color: $link;
$tabs-link-hover-color: $grey-light;
$tabs-toggle-link-hover-background-color: $black-ter;
$tabs-toggle-link-active-color: $grey-darker;
$border: $turquoise;

$footer-padding: 0.5rem;
$footer-background-color: $grey-darker;
$footer-color: white;

$table-cell-border: 1px solid $old-grey-light;

@import "~bulma/bulma";
@import "~bulma/sass/utilities/mixins";
@import "~bulma-tooltip/src/sass/index";
@import "~bulma-extensions/bulma-checkradio/src/sass/index";
@import "~bulma-extensions/bulma-tagsinput/src/sass/index";
@import "~bulma-extensions/bulma-switch/src/sass/index";
@import '~@creativebulma/bulma-collapsible/src/sass/index';
@import "select2";
@import "css/highlight";

.has-loading {
    &.is-loading {
        position: relative;
        pointer-events: none;
        opacity: 0.5;
        &:after {
            @include loader;
            position: absolute;
            top: calc(50% - 2.5em);
            left: calc(50% - 2.5em);
            width: 5em;
            height: 5em;
            border-width: 0.25em;
        }
    }
}

figure { border: 4px solid white; }

#main-help { display: block; }
.section { padding: 0.25em 1.5em 3em 1.5em; }

footer {
  bottom: 0; left: 0; right: 0;
  position: fixed; z-index: 200;
}

.highlight > pre { background-color: #2f1e2e; }
pre { padding: 0.75rem; }
div.prompt { display: none; }
a.anchor-link { display: none; }
.cell .input { line-height: 1em; height: auto; display: block; border: 0; }

#czContainer { display: block; }
.recordset { padding-bottom: 0.5em; margin-right: 0.75rem; }

@keyframes blink {50% { color: transparent }}
.loader__dot { animation: 1s blink infinite }
.loader__dot:nth-child(2) { animation-delay: 250ms }
.loader__dot:nth-child(3) { animation-delay: 500ms }

.backgrid tbody tr:hover { background-color: $old-grey-light; }
.backgrid .renderable { text-align: center; }
.backgrid thead th button { display: inline; }
.backgrid .string-cell { text-align: center; }
.backgrid tbody tr:hover { background-color: $old-grey-light; }
div.columnmanager-dropdown-container { max-height: unset; }

.jh-type-string { font-weight: normal; }
h2 { padding: 15px; }

.handsontable thead th .relative { text-align: center; }
.navbar.is-fixed-top { z-index: 200; }
.dropdown-menu { z-index: 200; min-width: 3rem; }
a.dropdown-item { padding-right: 1rem; }

